@@ -14,6 +14,7 @@ Changelog for LedgerSMB 1.3.7
 * Correcting errors attaching and retriving URL attachments (Chris T)
 * Correcting history.css not found (Chris T)
 * Correcting parse errors in pos_template.txt (Chris T)
+* Corrected Action not defined error on asset import (Chris T)
 
 Changelog for LedgerSMB 1.3.6
 * Including xelatex templates under directory templates/xedemo (Chris T)
